Sanitizes title in case of fallback to basic search

--- a/tests/cassettes/subs4free/test_list_subtitles_movie_no_results.yaml
+++ b/tests/cassettes/subs4free/test_list_subtitles_movie_no_results.yaml
@@ -8,7 +8,7 @@ interactions:
       Referer: ['https://www.sf4-industry.com']
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: https://www.sf4-industry.com/search_report.php?search=Ender's%20Game%202013&searchType=1
+    uri: https://www.sf4-industry.com/search_report.php?search=enders%20game%202013&searchType=1
   response:
     body:
       string: !!binary |
