--- a/tests/cassettes/addic7ed/test_show_with_asterisk.yaml
+++ b/tests/cassettes/addic7ed/test_show_with_asterisk.yaml
@@ -7,7 +7,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: http://www.addic7ed.com/shows.php
+    uri: https://www.addic7ed.com/ajax_getShows.php
   response:
     body:
       string: !!binary |
@@ -2183,7 +2183,7 @@ interactions:
       Cookie: [PHPSESSID=fkev79ebsclub7o2pm4l40bcb1]
       User-Agent: [Subliminal/2.1]
     method: GET
-    uri: http://www.addic7ed.com/shows.php
+    uri: https://www.addic7ed.com/ajax_getShows.php
   response:
     body:
       string: !!binary |
