--- a/tests/cassettes/core/test_download_best_subtitles_min_score.yaml
+++ b/tests/cassettes/core/test_download_best_subtitles_min_score.yaml
@@ -11,7 +11,7 @@ interactions:
       User-Agent:
       - Subliminal/2.1
     method: GET
-    uri: http://www.addic7ed.com/shows.php
+    uri: https://www.addic7ed.com/ajax_getShows.php
   response:
     body:
       string: "<html>\r\n<head><title>301 Moved Permanently</title></head>\r\n<body\
