--- a/tests/cassettes/addic7ed/test_query_parsing_colon.yaml
+++ b/tests/cassettes/addic7ed/test_query_parsing_colon.yaml
@@ -7,7 +7,7 @@ interactions:
       Connection: [keep-alive]
       User-Agent: [Subliminal/2.0]
     method: GET
-    uri: http://www.addic7ed.com/shows.php
+    uri: https://www.addic7ed.com/ajax_getShows.php
   response:
     body:
       string: !!binary |
