--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,13 @@ sudo: false
 
 language: python
 
-dist: xenial
+dist: bionic
 
 python:
   - "2.7"
-  - "3.4"
-  - "3.5"
   - "3.6"
   - "3.7"
+  - "3.8"
 
 env:
   - PARSER=native
@@ -23,13 +22,13 @@ addons:
 
 matrix:
   include:
-    - python: "3.7"
+    - python: "3.8"
       env:
         - PARSER=native
         - VCR_RECORD_MODE=all
         - PYTEST_ADDOPTS="-m integration"
   allow_failures:
-    - python: "3.7"
+    - python: "3.8"
       env:
         - PARSER=native
         - VCR_RECORD_MODE=all
