--- a/tests/cassettes/thesubdb/test_list_subtitles.yaml
+++ b/tests/cassettes/thesubdb/test_list_subtitles.yaml
@@ -2,10 +2,14 @@ interactions:
 - request:
     body: null
     headers:
-      Accept: ['*/*']
-      Accept-Encoding: ['gzip, deflate']
-      Connection: [keep-alive]
-      User-Agent: ['SubDB/1.0 (subliminal/2.0; https://github.com/Diaoul/subliminal)']
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      Connection:
+      - keep-alive
+      User-Agent:
+      - SubDB/1.0 (subliminal/2.1; https://github.com/Diaoul/subliminal)
     method: GET
     uri: http://api.thesubdb.com/?action=search&hash=9dbbfb7ba81c9a6237237dae8589fccc
   response:
@@ -13,10 +17,19 @@ interactions:
       string: !!binary |
         H4sIAAAAAAAAA0vN00kt1kkr0ikoAQBr9k5KCwAAAA==
     headers:
-      connection: [keep-alive]
-      content-encoding: [gzip]
-      content-type: [text/html]
-      date: ['Tue, 09 Feb 2016 16:18:41 GMT']
-      server: [nginx/1.6.0]
-    status: {code: 200, message: OK}
+      Connection:
+      - keep-alive
+      Content-Encoding:
+      - gzip
+      Content-Type:
+      - text/html
+      Date:
+      - Sat, 09 May 2020 12:24:12 GMT
+      Server:
+      - nginx/1.6.0
+      Transfer-Encoding:
+      - chunked
+    status:
+      code: 200
+      message: OK
 version: 1
