Update shooter cassettes

--- a/tests/cassettes/shooter/test_query_movie_no_hash.yaml
+++ b/tests/cassettes/shooter/test_query_movie_no_hash.yaml
@@ -2,22 +2,42 @@ interactions:
 - request:
     body: null
     headers:
-      Accept: ['*/*']
-      Accept-Encoding: ['gzip, deflate']
-      Connection: [keep-alive]
-      Content-Length: ['0']
-      User-Agent: [Subliminal/2.0]
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '0'
+      User-Agent:
+      - Subliminal/2.1
     method: POST
-    uri: https://www.shooter.cn/api/subapi.php?lang=chn&pathinfo=%2Fhome%2Fantoine%2FPycharmProjects%2Fsubliminal%2Fenders.game.2013.720p.bluray.x264-sparks.mkv&format=json
+    uri: https://www.shooter.cn/api/subapi.php?pathinfo=%2Fhome%2Fjones%2Fworkspace%2Fsubliminal%2Fenders.game.2013.720p.bluray.x264-sparks.mkv&format=json&lang=chn
   response:
     body:
       string: !!binary |
         /w==
     headers:
-      connection: [keep-alive]
-      content-type: [application/octet-stream]
-      date: ['Wed, 23 Mar 2016 08:47:19 GMT']
-      set-cookie: [SERVERID=7fad01ef5bb15ec46fb1a79d14039fc6|1458722839|1458722839;Path=/]
-      x-cache-status: [MISS]
-    status: {code: 200, message: OK}
+      Connection:
+      - keep-alive
+      Content-Type:
+      - application/octet-stream
+      Date:
+      - Sat, 09 May 2020 12:25:19 GMT
+      EagleId:
+      - 2ff62ba115890271194335946e
+      Server:
+      - Tengine
+      Timing-Allow-Origin:
+      - '*'
+      Transfer-Encoding:
+      - chunked
+      Via:
+      - cache33.l2ot7-1[220,0], cache13.de2[373,0]
+      X-Cache-Status:
+      - MISS
+    status:
+      code: 200
+      message: OK
 version: 1
