Update opensubtitles cassettes (except tag search: currently not working)

--- a/tests/cassettes/opensubtitles/test_tag_match.yaml
+++ b/tests/cassettes/opensubtitles/test_tag_match.yaml
@@ -10,13 +10,13 @@ interactions:
 
       <param>
 
-      <value><string></string></value>
+      <value><string>python-subliminal</string></value>
 
       </param>
 
       <param>
 
-      <value><string></string></value>
+      <value><string>subliminal</string></value>
 
       </param>
 
@@ -39,7 +39,7 @@ interactions:
 '
     headers:
       Accept-Encoding: [gzip]
-      Content-Length: ['317']
+      Content-Length: ['344']
       Content-Type: [text/xml]
       User-Agent: [xmlrpclib.py/1.0.1 (by www.pythonware.com)]
     method: POST
