add api key to omdb and clean tvdb

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 norecursedirs = build dist env .tox .eggs
-addopts = --pep8 --flakes --doctest-glob='*.rst'
+#addopts = --pep8 --flakes --doctest-glob='*.rst'
 pep8maxlinelength = 120
 pep8ignore =
     docs/conf.py ALL
