--- a/tox.ini
+++ b/tox.ini
@@ -4,4 +4,4 @@ envlist = {py38,py39,py310,py311,py312}-{native,lxml}
 [testenv]
 deps =
     lxml: lxml
-commands = python setup.py test
+commands = pytest
