--- a/tests/cassettes/omdb/test_search_wrong_title.yaml
+++ b/tests/cassettes/omdb/test_search_wrong_title.yaml
@@ -5,46 +5,41 @@ interactions:
       Accept:
       - '*/*'
       Accept-Encoding:
-      - gzip, deflate
+      - gzip, deflate, br, zstd
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.23.0
+      - Subliminal/2.1
     method: GET
-    uri: http://www.omdbapi.com/?apikey=00000000&r=json&v=1&s=Meen+of+Stal&page=1
+    uri: https://www.omdbapi.com/?r=json&v=1&apikey=44d5b275&s=Meen+of+Stal&page=1
   response:
     body:
-      string: !!python/unicode '{"Response":"False","Error":"Movie not found!"}'
+      string: '{"Response":"False","Error":"Movie not found!"}'
     headers:
-      accept-ranges:
+      Accept-Ranges:
       - bytes
+      CF-Cache-Status:
+      - MISS
+      CF-RAY:
+      - 887d9680bc4c999f-CDG
+      Cache-Control:
+      - public, max-age=86400
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '47'
+      Content-Type:
+      - application/json; charset=utf-8
+      Date:
+      - Wed, 22 May 2024 14:45:05 GMT
+      Server:
+      - cloudflare
       access-control-allow-origin:
       - '*'
-      cache-control:
-      - public, max-age=86400
-      cf-cache-status:
-      - MISS
-      cf-ray:
-      - 590c4eb0ee1acc62-ZRH
-      cf-request-id:
-      - 029b8f828e0000cc62e039d200000001
-      connection:
-      - keep-alive
-      content-length:
-      - '47'
-      content-type:
-      - application/json; charset=utf-8
-      date:
-      - Sat, 09 May 2020 15:03:28 GMT
       expires:
-      - Sat, 09 May 2020 16:03:28 GMT
+      - Wed, 22 May 2024 15:45:05 GMT
       last-modified:
-      - Sat, 09 May 2020 15:03:28 GMT
-      server:
-      - cloudflare
-      set-cookie:
-      - __cfduid=db89b708fab77b7d74a829f7b40b423e51589036608; expires=Mon, 08-Jun-20
-        15:03:28 GMT; path=/; domain=.omdbapi.com; HttpOnly; SameSite=Lax
+      - Wed, 22 May 2024 14:45:05 GMT
       vary:
       - '*, Accept-Encoding'
       x-aspnet-version:
