--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,19 +33,21 @@ classifiers = [
 ]
 dynamic = ["version", "readme"]
 dependencies = [
-    "appdirs>=1.3",
     "babelfish>=0.6.1",
     "beautifulsoup4>=4.4.0",
     "chardet>=5.0",
-    "click>=4.0",
+    "click>=8.0",
+    "click-option-group>=0.5.6",
     "dogpile.cache>=1.0",
     "enzyme>=0.4.1",
     "guessit>=3.0.0",
+    "platformdirs>=4.2",
     "rarfile>=2.7",
     "rebulk>=3.0",
     "requests>=2.0",
     "srt>=3.5",
     "stevedore>=3.0",
+    "tomli>=2",
 ]
 
 # extras
@@ -155,19 +157,21 @@ select = [
     "DTZ",    # flake8-datetimez
     "A",      # flake8-builtins
     "FBT",    # flake8-boolean-trap
-    "ANN2",   # flake8-annotations
-    "ANN001",
+    "ANN0",   # flake8-annotations
+    "ANN2",
     "ASYNC",  # flake8-async
     "TRY",    # tryceratops
 ]
 ignore = [
+    "D105",   # Missing docstring in magic method
+    "D107",   # Missing docstring in `__init__`
     "D401",   # First line should be in imperative mood
 ]
 
 [tool.ruff.lint.per-file-ignores]
 "docs/conf*.py" = ["ALL"]
 "subliminal/__init__.py" = ["E402"]
-"tests/*.py" = ["D", "S", "RUF012"]
+"tests/*.py" = ["D", "S", "RUF012", "ANN", "FBT"]
 
 # https://docs.astral.sh/ruff/formatter/
 [tool.ruff.format]
