--- a/tests/cassettes/opensubtitlescom/test_login_bad_password.yaml
+++ b/tests/cassettes/opensubtitlescom/test_login_bad_password.yaml
@@ -5,7 +5,7 @@ interactions:
       Accept:
       - '*/*'
       Accept-Encoding:
-      - gzip, deflate, br
+      - gzip, deflate, br, zstd
       Api-Key:
       - mij33pjc3kOlup1qOKxnWWxvle2kFbMH
       Connection:
@@ -20,8 +20,7 @@ interactions:
     uri: https://api.opensubtitles.com/api/v1/login
   response:
     body:
-      string: '{"message":"Error, invalid username/password failed:0 remaining:10
-        - this password was already tried in the past 24 hours ","status":401}'
+      string: '{"message":"Error, invalid username/password failed:2 remaining:8  ","status":401}'
     headers:
       Access-Control-Allow-Headers:
       - Origin, Authorization, Accept, Api-Key, Content-Type, X-User-Agent
@@ -34,17 +33,17 @@ interactions:
       CF-Cache-Status:
       - DYNAMIC
       CF-RAY:
-      - 883aac320c07f0d3-CDG
+      - 88a996462cdb3d04-CDG
       Cache-Control:
       - max-age=0, private, must-revalidate, s-maxage=600
       Connection:
       - keep-alive
       Content-Length:
-      - '137'
+      - '82'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Tue, 14 May 2024 11:50:47 GMT
+      - Mon, 27 May 2024 22:54:29 GMT
       NEL:
       - '{"success_fraction":0,"report_to":"cf-nel","max_age":604800}'
       RateLimit-Limit:
@@ -54,13 +53,13 @@ interactions:
       RateLimit-Reset:
       - '1'
       Report-To:
-      - '{"endpoints":[{"url":"https:\/\/a.nel.cloudflare.com\/report\/v4?s=qIJjrKx7dRU%2FmUq%2BdrNjY0vJr5ykY6x1j%2BGvkCb3ad3nv9ymcWCK%2BkJqs%2F%2BPdZu%2BOQ2zP7%2BOK35l0wnI%2BTrbh7PEAZh24TGGd8pFeaM5WIc%2FNk28T53MfbMVWz39jjAhRAOrGgEHZI4%3D"}],"group":"cf-nel","max_age":604800}'
+      - '{"endpoints":[{"url":"https:\/\/a.nel.cloudflare.com\/report\/v4?s=KLt92E%2FP%2FvwaVqbVaTzSoyY0jzPRF%2BOdur6cvNlOVInWx1DO0c5fvIyj1Mp7%2B6Qh5rVqP3jlvtZXkcr6rkpMm4FsZ58efW69dkQMrdV41%2FjJZukDXaA%2F1V7Ok%2FVllN7Kzum7ypN52As%3D"}],"group":"cf-nel","max_age":604800}'
       Server:
       - cloudflare
       Strict-Transport-Security:
       - max-age=15552000; includeSubDomains; preload
       X-Cache-Backend:
-      - apigw1_8000 rb8
+      - apigw1_8000 rb1-temp
       X-Content-Type-Options:
       - nosniff
       X-Download-Options:
@@ -68,9 +67,9 @@ interactions:
       X-Frame-Options:
       - SAMEORIGIN
       X-Kong-Proxy-Latency:
-      - '0'
+      - '2'
       X-Kong-Upstream-Latency:
-      - '272'
+      - '271'
       X-RateLimit-Limit-Hour:
       - '60'
       X-RateLimit-Limit-Second:
@@ -80,11 +79,9 @@ interactions:
       X-RateLimit-Remaining-Second:
       - '0'
       X-Request-Id:
-      - 354850ee-d6ee-4397-aa33-f61a55ed55c0
+      - 1de07bec-fc68-43d8-a573-b7480ebc6799
       X-Runtime:
-      - '0.269846'
-      X-StackifyID:
-      - V1|85e0e9ba-d260-48ca-b3eb-6b1adf6d0b0e|C98087|CD1
+      - '0.269016'
       X-Var-Cache:
       - MISS
       X-Via:
