--- a/tests/cassettes/gestdown/test_query_wrong_series.yaml
+++ b/tests/cassettes/gestdown/test_query_wrong_series.yaml
@@ -3,7 +3,7 @@ interactions:
     body: null
     headers:
       Accept-Encoding:
-      - gzip, deflate, br
+      - gzip, deflate, br, zstd
       Connection:
       - keep-alive
       User-Agent:
@@ -17,9 +17,9 @@ interactions:
       string: ''
     headers:
       CF-Cache-Status:
-      - MISS
+      - EXPIRED
       CF-RAY:
-      - 87f858fe3d003c8d-CDG
+      - 88ba5f36fd9c5bd5-LIS
       Cache-Control:
       - max-age=7200
       Connection:
@@ -27,11 +27,11 @@ interactions:
       Content-Length:
       - '0'
       Date:
-      - Mon, 06 May 2024 10:39:39 GMT
+      - Wed, 29 May 2024 23:47:51 GMT
       NEL:
       - '{"success_fraction":0,"report_to":"cf-nel","max_age":604800}'
       Report-To:
-      - '{"endpoints":[{"url":"https:\/\/a.nel.cloudflare.com\/report\/v4?s=6odD0UJ2lg05gW9nVH3%2F7%2FDAhBmsbf%2F%2BAqG3WKppcdNKXz2Bp0mYfNmQFx5m2hV%2BBg88ORxclcBi8jKWfJOyEYNprCVta8PORscr7MURAVt5fkM4%2BBslSkfrMxTsXdIoYaN7Qw%3D%3D"}],"group":"cf-nel","max_age":604800}'
+      - '{"endpoints":[{"url":"https:\/\/a.nel.cloudflare.com\/report\/v4?s=17kx7GJU2LT93Y%2BvftBeE%2FLmwvB%2Be4qm%2B3zgK%2B5S9RehiPd9f827WUGjM7mAYK8p7MxZ2szWKxppc811Qf%2FT5Z0nlTYUiYj2RyGqV4xr3lPhryQh8%2BInrGch3lb3EHfyNvsccw%3D%3D"}],"group":"cf-nel","max_age":604800}'
       Server:
       - cloudflare
       Strict-Transport-Security:
