Improve subtitle content handling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "enzyme>=0.4.1",
     "guessit>=3.0.0",
     "platformdirs>=4.2",
+    "pysubs2>=1.7",
     "rarfile>=2.7",
     "rebulk>=3.0",
     "requests>=2.0",
