--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,12 @@
-include LICENSE HISTORY.rst requirements.txt
+include LICENSE
+include HISTORY.rst
+include CONTRIBUTING.md
+include Dockerfile
+include .dockerignore
+include .pre-commit-config.yaml
+include tox.ini
+
+graft docs
+graft tests
+
+prune */__pycache__
