--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -14,6 +14,7 @@ concurrency:
 jobs:
   test:
     name: Test
+    if: github.event_name != 'schedule'
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -52,8 +53,29 @@ jobs:
           fail_ci_if_error: true
   coveralls-finish:
     needs: test
+    if: github.event_name != 'schedule'
     runs-on: ubuntu-latest
     steps:
       - uses: coverallsapp/github-action@v2.2.3
         with:
           parallel-finished: true
+
+  test-api:
+    name: Test API
+    if: github.event_name == 'schedule'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+      - name: install
+        run: |
+          python -m pip install -U pip
+          python -m pip install -e ".[test]"
+      - name: remove cassettes
+        run: |
+          rm -rf tests/cassettes
+      - name: run test
+        run: |
+          pytest
