--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -1,4 +1,4 @@
-name: CI-Lint
+name: CI
 
 on:
   push:
@@ -60,3 +60,52 @@ jobs:
         with:
           name: docs
           path: docs/_build/
+
+  test:
+    name: Test
+    if: github.event_name != 'schedule'
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        exclude:
+          # macos-latest only work with arm64
+          - os: macos-latest
+            python-version: ["3.8", "3.9"]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: 'pip'
+      - name: install
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .[test]
+      - name: run pytest --cov
+        run: |
+          set -e
+          pytest --cov=./ --cov-report=xml
+          : .coverage confuses coveralls, remove it
+          rm -f .coverage
+      - name: upload coverage data to coveralls
+        uses: coverallsapp/github-action@v2.2.3
+        with:
+          parallel: true
+          flag-name: python-${{ matrix.python-version }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: upload coverage data to codecov
+        uses: codecov/codecov-action@v4.1.0
+        with:
+          fail_ci_if_error: true
+
+  coveralls-finish:
+    needs: test
+    if: github.event_name != 'schedule'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: coverallsapp/github-action@v2.2.3
+        with:
+          parallel-finished: true
