--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dependencies = [
     "rarfile>=2.7",
     "rebulk>=3.0",
     "requests>=2.0",
+    "setuptools>=67", # enzyme uses pkg_resources
     "srt>=3.5",
     "stevedore>=3.0",
     "tomli>=2",
